--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 }
 
 body{
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(227, 239, 255);
+    overflow-x: hidden;
 }
 
 .container{
@@ -52,4 +53,81 @@ body{
 
 .delete{
     color: red;
+}
+
+.show__add__form{
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+    cursor: pointer;
+    background-color: #ffffff;
+    height: 75px;
+    width: 75px;
+    font-size: 12px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+    z-index: 3;
+}
+
+.div__form{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) ease;
+}
+
+.div__form.active{
+    transform: translateX(0%);
+}
+
+.div__form::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    backdrop-filter: blur(2px);
+    z-index: 1;
+}
+
+.add__user__form{
+    position: absolute;
+    right: 0;
+    z-index: 2;
+    width: 50%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 100px 50px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.add__user__form h1{
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.add__user__form input,
+.add__user__form button{
+    width: 300px;
+    padding: 7.5px 10px;
+    outline: none;
+}
+
+.add__user__form input,
+.add__user__form h1{
+    margin-bottom: 30px;
+}
+
+.add__user__form button{
+    cursor: pointer;
 }
