--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,12 @@ body{
     left: 0;
     width: 100%;
     height: 100vh;
-    transform: translateX(100%);
-    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) ease;
+    opacity: 0;
+    transition: 0.3s ease;
 }
 
 .div__form.active{
-    transform: translateX(0%);
+    opacity: 1;
 }
 
 .div__form::after{
