--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,11 @@ body{
     left: 0;
     width: 100%;
     height: 100vh;
-    opacity: 0;
-    transition: 0.3s ease;
+    display: none;
 }
 
 .div__form.active{
-    opacity: 1;
+    display: flex;
 }
 
 .div__form::after{
@@ -95,12 +94,10 @@ body{
     height: 100%;
     background-color: rgba(0, 0, 0, .2);
     backdrop-filter: blur(2px);
-    z-index: 1;
 }
 
 .add__user__form{
-    position: absolute;
-    right: 0;
+    position: relative;
     z-index: 2;
     width: 50%;
     height: 100%;
@@ -108,6 +105,7 @@ body{
     padding: 100px 50px 0;
     display: flex;
     flex-direction: column;
+    margin-left: auto;
 }
 
 .add__user__form h1{
